<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones_Login.Login_email">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_login"
            android:fontFamily="@font/indigo_daisy"
            android:textSize="50sp"
            android:layout_marginTop="140dp"
            android:layout_marginLeft="25dp" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:src="@drawable/tractocamiones"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="Logo"
            android:adjustViewBounds="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_con_tu_correo_y_contra"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto_regular"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Correo electronico">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:endIconMode="password_toggle"
            android:hint="Contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/EtPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:inputType="textPassword"
                android:textColor="?attr/colorOnSurface"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox android:id="@+id/cbRecordar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:text="Recordar usuario y contraseña" />

        <Button
            android:id="@+id/BtnIngresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:text="@string/iniciar_sesion" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:text="@string/Txt_no_cuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/TxtRegistrarme"
                android:text="@string/Txt_registrarme"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>