<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditarPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/Txt_editar_p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Txt_editar_p"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            />

        <!-- Imagen de Perfil -->
        <RelativeLayout
            android:id="@+id/perfilRL"
            android:layout_width="135dp"
            android:layout_height="135dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Txt_editar_p"
            android:layout_marginTop="15dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_perfil"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/img_perfil"
                android:scaleType="centerCrop"
                />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/FABCambiarImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:fabSize="mini"
                android:src="@drawable/iconimagen"
                app:tint="@android:color/white"
                android:backgroundTint="@color/green"
                />

        </RelativeLayout>

        <!-- Nombres -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TILNombres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/perfilRL"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            >

            <EditText
                android:id="@+id/Et_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Et_nombres"
                android:inputType="textPersonName"/>


        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/LL_calendario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_below="@id/TILNombres">

            <ImageView
                android:id="@+id/Iv_abrir_cal"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/calendario"
                android:layout_marginEnd="7dp"/>

            <!-- Fecha de nacimiento -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TIL_Nac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/TILNombres"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                >

                <EditText
                    android:id="@+id/Et_f_nac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_f_nac"/>


            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>



        <!-- Cod + telefono -->
        <RelativeLayout
            android:id="@+id/RL_Cod_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/LL_calendario"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/selectorCod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_rememberLastSelection="true"
                android:layout_centerVertical="true"/>

            <!-- Numero Telefonico -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/selectorCod"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                >

                <EditText
                    android:id="@+id/Et_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Et_telefono"
                    android:inputType="number"
                    />


            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Btn_actualizar"
            android:layout_width="200dp"
            android:layout_height="@dimen/m_button_height"
            android:layout_below="@id/RL_Cod_tel"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:text="@string/Btn_actualizar"
            android:textAllCaps="true"
            app:icon="@drawable/iconedit" />

    </RelativeLayout>

</RelativeLayout>